# logs-rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 0001_schema.sql
src/: init_admin.rs  main.rs
src/log_backend/: errors.rs  mod.rs
src/web/: mod.rs  prelude.rs  web_errors.rs
src/web/includes/: login.rs  mod.rs
src/web/includes/api/: benchmark_db.rs  get_admin_name.rs  mod.rs
src/web/includes/api/problems/: correction_problem.rs  mod.rs  past_problems.rs  problems_select.rs
src/web/includes/page_handlers/: index_page.rs  information_page.rs  mod.rs  politics_page.rs  problems_page.rs
src/web/includes/session/: mod.rs
src/web/static/css/: index.css  information.css  login.css
src/web/static/js/: module_close_notify.js
src/web/static/js/home/: main.js
src/web/static/js/problems/: module_hint.js
src/web/templates/: 404.html  footer.html  header.html  home.html  information.html  login.html  politics.html  problems.html
static/css/: footer.css  header.css  home.css  politics.css  problems.css
static/js/: fetch_get.js  header.js  main.js  notify.js
static/js/home/: benchmark_db.js
static/js/login/: main.js
static/js/problems/: main.js
