[package]
name = "logs-project"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
serde = { version = "1.0.228", default-feature = false }
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11.10"
thiserror = "2.0.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
minijinja = "2.18.0"
time = "0.3.47"
argon2 = { version = "0.5.3", features = ["std"] }
regex = "1.12.3"
validator = { version = "0.20", features = ["derive"] }
bollard = "0.20.2"
dotenv = "0.15.0"
futures = "0.3.32"
